2008-09-18  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/ui_utils.c:
   Display also the style of the current position in the status bar
   when debug mode is enabled.
   No need to make the debugging strings translatable in the status bar.
 * src/editor.c, src/plugins.c, src/sciwrappers.c, src/sciwrappers.h:
   Rename the new indicator functions and add documentation comment.
 * src/msgwindow.c:
   Handle error messages and warnings from the mcs (Mono) compiler like
   those from Pascal or Basic compilers.


2008-09-18  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/plugins.c:
   Use wrap label for the first label in the plugin manager dialog.
   Use scrolled window for plugin details text area to avoid resizing
   dialog components if a plugin has a long description.
 * src/plugindata.h:
   Fix ScintillaFuncs::indic_clear() return type, and rename to
   indicator_clear().
 * src/interface.c, src/prefs.c, src/keyfile.c, src/document.c,
   src/editor.c, src/editor.h, doc/geany.txt, doc/geany.html,
   geany.glade:
   Add 'Tab key indents' pref, which replaces hidden pref
   'use_tab_to_indent'; it's now on by default.


2008-09-17  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * data/filetypes.css, src/highlighting.c:
   Add missing 'directive' style to filetype CSS
   (patch from Jason Oster, #2114697, thanks).
 * src/callbacks.c, src/editor.c, src/keybindings.c, src/plugindata.h,
   src/plugins.c, src/sciwrappers.c, src/sciwrappers.h, src/tools.c,
   src/ui_utils.c:
   API changes:
   Rename sci_can_copy() into sci_has_selection().
   Rename sci_find_bracematch() into sci_find_matching_brace().
 * src/main.c:
   Display SVN revision number in version information if available.
 * src/editor.c, src/highlighting.c, src/plugindata.h, src/plugins.c,
   src/sciwrappers.c, src/sciwrappers.h:
   Replace the usage of the old Scintilla indicator API by the new
   modern API and remove old hacks (patch by Jason Oster, thanks).